--- a/hugo/content/blog/生活记录/奥本海默.md
+++ b/hugo/content/blog/生活记录/奥本海默.md
@@ -1,17 +1,15 @@
 ---
-title: 看电影 - 《奥本海默》
+title: 看电影《奥本海默》
 date: "2023-08-30"
 tags:
     - 玩乐
-    - 纪录片
+    - 电影
 ---
 
 今天和成龙去金石广场看了诺兰新片《奥本海默》。
 
-### 一些嘴替影评
- 
-> Nolan cuts his scenes to fit together like a jigsaw puzzle, and details that don’t fit—contradictions, subtleties, even little random peculiarities—get left out, and, with them, the feeling of experience, whether the protagonist’s or the viewer’s. What remains is a movie to be solved rather than lived.
->
-> The New Yorker - Richard Brody
-> 
-> [“Oppenheimer” Is Ultimately a History Channel Movie with Fancy Editing](https://www.newyorker.com/culture/the-front-row/oppenheimer-is-ultimately-a-history-channel-movie-with-fancy-editing)
+看到一篇 newyorker 的影评，说这个电影通过闪回的情节像拼图一样为观众提供了一个待解的谜题，观众看电影的过程就是在解密的过程，相对于顺序地体验人物经历更令人印象深刻。我觉得很有道理。
+
+[“Oppenheimer” Is Ultimately a History Channel Movie with Fancy Editing](https://www.newyorker.com/culture/the-front-row/oppenheimer-is-ultimately-a-history-channel-movie-with-fancy-editing)
+
+![奥本海默 历史图片](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E5%A5%A5%E6%9C%AC%E6%B5%B7%E9%BB%98%E5%8E%86%E5%8F%B2%E5%9B%BE%E7%89%87.jpg)
