--- a/hugo/content/blog/生活记录/漫画-初潮.md
+++ b/hugo/content/blog/生活记录/漫画-初潮.md
@@ -1,19 +1,17 @@
 ---
-title: 漫画分享 - 《初潮》
+title: 分享一篇情感刻画细腻的短篇漫画
 date: "2023-08-20"
 tags:
     - 漫画
     - 感情
+    - 分享
 ---
 
-![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E6%BC%AB%E7%94%BB-%E5%88%9D%E6%BD%AE-%E6%B5%B7%E6%8A%A5.jpg?x-oss-process=style/small_size_rule)
-
-
-
 > 泛苦青涩的暗恋、隐忍的反叛、靠近又远离，全都躁动又不安地随血液流逝了，初次体验的感情的潮水。
->
-> [微博 - 毛宇_MAOYU - 初潮](https://weibo.com/7719085444/NfqX52OFq)
 
 简直太好看了，感觉身临其境，能感受到角色的种种悲哀、纠结和挣扎，情节的穿插自然巧妙，看完后久久不能释怀。
 
+[微博 - 毛宇_MAOYU - 初潮](https://weibo.com/7719085444/NfqX52OFq)
+
+![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E6%BC%AB%E7%94%BB-%E5%88%9D%E6%BD%AE-%E6%B5%B7%E6%8A%A5.jpg?x-oss-process=style/small_size_rule)
 
