--- a/hugo/content/blog/生活记录/用电子废物做饰品.md
+++ b/hugo/content/blog/生活记录/用电子废物做饰品.md
@@ -12,4 +12,4 @@ tags:
 
 [生命源於無序的熱力學無止的碰撞 - Computationalism-OOO 化學反應](https://weibo.com/3195843380/N39MGEP3R)
 
-![电子垃圾废弃物饰品](https://wx4.sinaimg.cn/large/be7cb334gy1hehqk773waj23k0apihdy.jpg)
+![电子垃圾废弃物饰品](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E7%94%B5%E5%AD%90%E5%9E%83%E5%9C%BE%E6%8C%82%E9%A5%B0.jpg)
