--- a/hugo/content/blog/生活记录/圃美多-黑椒牛柳面.md
+++ b/hugo/content/blog/生活记录/圃美多-黑椒牛柳面.md
@@ -22,12 +22,14 @@ date: "2023-09-07"
 还有更多夸张的介绍：
 
 > 西式黑椒牛柳酱的起源是西式牛排料理搭配牛排酱汁。正宗的黑椒汁采用Demi-glace(牛高汤)做基础汤汁进行调配。
-> 
+
 > 在高汤基础上，加入现磨黑胡椒碎、白兰地和新鲜迷迭香等各种香料，小火慢慢熬制而成。酱汁层次分明，入口先是浓郁的黑胡椒味，咀嚼牛肉的时候还能品尝到淡淡的白兰地香气。
-> 
+
 > 圃美多黑椒牛柳酱通过对酱料的多次调试及市场调研，结合西式黑椒牛柳酱料配方和中国消费者口味进行本土化调整制成。
-> 
-> 厚切牛柳条是本款产品的一大特色，牛柳肉嫩多汁，搭配粗粒黑胡椒碎，刺激舌尖每一块味蕾的美味，唇齿留香。产品构成一应俱全，无需繁琐调味，仅需2分钟，在家轻松享用。有多种包装规格和形式，满足各种需求。
+
+> 厚切牛柳条是本款产品的一大特色，牛柳肉嫩多汁，搭配粗粒黑胡椒碎，刺激舌尖每一块味蕾的美味，唇齿留香。
+
+> 产品构成一应俱全，无需繁琐调味，仅需2分钟，在家轻松享用。有多种包装规格和形式，满足各种需求。
 
 描述得像是给总统吃的美味佳肴，实际却这样露骨，好无语，还请大家下次看到避雷！！！
 
