--- a/hugo/content/blog/生活记录/宝可梦晶灿钻石一周目通关.md
+++ b/hugo/content/blog/生活记录/宝可梦晶灿钻石一周目通关.md
@@ -1,10 +1,6 @@
 ---
-title: <宝可梦晶灿钻石>一周目通关
+title: 《晶灿钻石》通关1
 date: "2023-09-03"
-tags:
-    - Pokemon
-    - 玩乐
-    - 游戏
 ---
 
 ![](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E5%AE%9D%E5%8F%AF%E6%A2%A6%E6%99%B6%E7%81%BF%E9%92%BB%E7%9F%B3%E4%B8%80%E5%91%A8%E7%9B%AE1.jpg)
