--- a/hugo/content/blog/科研经历/讲座2.md
+++ b/hugo/content/blog/科研经历/讲座2.md
@@ -1,5 +1,5 @@
 ---
-title: (原稿)“我为什么要读研究生”-李昕老师课题组茶话会
+title: (原稿)李昕老师课题组茶话会“为什么读研”
 date: "2023-09-15"
 ---
 
@@ -20,14 +20,14 @@ date: "2023-09-15"
 - [学长2](#学长2)
 - [学长3](#学长3)
 - [学长4](#学长4)
-- [李昕老师点评学长](#李昕老师点评学长)
+- [李昕老师点评高年级发言](#李昕老师点评高年级发言)
 - [老师评价研一学生](#老师评价研一学生)
 - [我的发言](#我的发言)
 
 
 ### 开题
 
-- 目标分解：分解到可以落地，有规划才能做事；。
+- 目标分解：分解到可以落地，有规划才能做事；
 - 课题组的发展：从无到有；
 - 不允许组内矛盾；
 - 主题：为什么要在石油大学待三年，目的是什么？
@@ -81,7 +81,7 @@ date: "2023-09-15"
 ### 同学6
 
 - 高考完本研班招生，狡猾的通知中强调保研名额、强调有奖学金；
-- 进组一年的学习过程中，认识到读研对人具有很大的提升，全方位提升素质和能力，包括逻辑思维能力和表达能力。
+- 进组一年的学习过程中，认识到读研对人具有很大的提升，全方位提升素质和能力，包括逻辑思维能力和表达能力；
   - 举例：高中作文很自信，结果分数不尽人意，问语文老师，得到结果说跑题了，要多看别人怎么写；
   - 做课程PPT：一针见血指出缺点——逻辑不清楚，脑子里的逻辑不够明显，不能表达清除，从那之后逻辑思维能力有了提升——先换位思考看别人能不能懂内容的逻辑；
 - 提高阅读能力，阅读大量文献；
@@ -108,7 +108,7 @@ date: "2023-09-15"
 
 ### 同学9
 
-- 提升学历和竞争力，学也是学了，但是没有学到极致，技术上不上不下，很尴尬，保研失利。
+- 提升学历和竞争力，学也是学了，但是没有学到极致，技术上不上不下，很尴尬，保研失利；
 - 教育的及时性，有了阅历就明白了；
 - 不确定自己的发展，不如多读三年，会给以后的自己更多的收获
 - 招聘信息要求硕士，提升学历对自己就业形式更多一些；
@@ -160,7 +160,7 @@ date: "2023-09-15"
 - 怎么渡过35岁危机，本科开发被淘汰，希望读研搞算法渡过危机；
 - 自我表达、公众面前汇报等能力明显提高，能够掌握重点；
 - 在本科考研面试一塌糊涂，现在知道如何表达自己的优点，自我表达良好；
-- 本科团队合作混乱，老师带领分工。
+- 本科团队合作混乱，老师带领分工；
 - 企业考察时会考察分析问题和解决问题的能力，能够分析出现问题的原因，
 
 ### 学长4
@@ -171,7 +171,7 @@ date: "2023-09-15"
 - 遇到挫折不要害怕，慢慢来；
 
 
-### 李昕老师点评学长
+### 李昕老师点评高年级发言
 
 - 做事不够踏实，做事可能会有差错，重要的事情没有交给他做；
 - 和老师的矛盾没有解决，一遍一遍被退回，心理产生了一些想法；
