--- a/hugo/content/blog/考研山大/考研预报名.md
+++ b/hugo/content/blog/考研山大/考研预报名.md
@@ -1,7 +1,19 @@
 ---
-title: 考研预报名2
+title: 考研预报名
 date: "2023-09-24"
 ---
+
+### 报考CG学硕
+
+今天是考研预报名的第一天，中午突然想起来预报名会不会要抢考场，庆幸查了查说不用抢考场，但是还是有点紧张，毕竟是第一次考研，不知道会不会出什么问题，因此就想把预报名事情先做了。
+
+其实应该提前了解预报名的各种流程，但是最近时间安排有些混乱，没来得及了解具体的内容，这一点很不好，“凡事预则立”，我没有提前了解和计划，导致今天预报名的时候有些手忙脚乱，不过还好最后顺利完成了预报名。
+
+![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E8%80%83%E7%A0%94%E9%A2%84%E6%8A%A5%E5%90%8D.png?x-oss-process=style/small_size_rule)
+
+希望自己能好好利用剩下的三个月时间，能顺利上岸。
+
+### 改志愿
 
 预报名完成6、7小时后，我无意间点开了山东大学研究生院的网站，发现山大计学只招2人！这意味着我几乎不能选择心仪的导师——大部分都招满了，最后可能只能去小小实验室，总之肯定和CG再无瓜葛，我认为方向还是很重要的，想换学校专业报考。
 
