--- a/hugo/content/blog/一些思考/樊笼.md
+++ b/hugo/content/blog/一些思考/樊笼.md
@@ -3,7 +3,7 @@ title: 批评“解放”思想
 date: "2023-09-28"
 ---
 
-我的父母总是在我的每个冲刺阶段告诉我，现在正是关键时期，之后就解放了。这句话听起来是善意的、是在疏解压力，但其实，这句话是充满恶意的，是对一个人未来发展的极大不负责。
+我的父母总是在我的每个冲刺阶段告诉我，现在正是关键时期，之后就解放了。这句话听起来是善意的、是在疏解压力，但其实，这句话是充满恶意的，是对一个人未来发展的不负责。
 
 起初，听到这句话让我对未来抱有不切实际的幻想。当他们所描述的未来真正到来的时候，我会认为自己理所当然应该“解放”一下。但当我发现现实并不如他们所说时，会有很强烈的逆反心理——按你们说的，我就应该“解放”。
 
