--- a/tech/docs/CPP-with-LIXIN/关于.md
+++ b/tech/docs/CPP-with-LIXIN/关于.md
@@ -1,5 +1,23 @@
-# 介绍
+# 和李昕老师一起重温 CPP
 
-::: info
-未来我会完善
-:::
+## 李昕老师的一些介绍
+
+<img src="https://computer.upc.edu.cn/_upload/article/images/8a/61/1c1311e6488981cd0d91d592328c/66e3dbf5-1ae9-482d-a2a8-ead19e6ab69f.jpeg" style="width: 180px;padding: 2px; float:right; padding:20px; padding-top:0px">
+
+博士，中国石油大学（华东）计算机科学与技术学院副教授，硕士生导师。
+
+博士毕业于浙江大学CAD&CG 国家重点实验室，在中国石油大学（华东）取得硕士和学士学位，2017.10-2018.10美国肯特州立大学访问学者。
+
+研究方向是智慧海洋、计算机视觉和可视分析。
+
+中国计算机学会YOCSEF青岛21-22主席，中国计算机学会青岛分部执行委员，山东浙江大学校友会理事，山东省“互联网+教师专业发展”工程省级工作坊主持人。
+
+山东省教学创新大赛二等奖，主持国家基金等同类项目2项，山东省自然科学基金面上项目2项，申请专利4项。China Vis和Journal of Ambient Intelligence and Humanized Computing等会议和期刊审稿人。研究小组主页：http://upcxai.top/
+
+## 我对老师的了解
+
+### 上过老师的 Python 课
+
+### 听过几次老师的组会
+
+## 为什么报名了李老师的 CPP 课程
