--- a/tech/docs/SFTang-Computer-Consist/关于.md
+++ b/tech/docs/SFTang-Computer-Consist/关于.md
@@ -1,3 +1,20 @@
-::: info
-将来撰写
-:::
+# 计算机组成原理（第3版）
+
+## 关于本书
+
+<div style="padding: 15px;  float:right; width: 200px;">
+<img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/tech_blog_img/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BB%84%E6%88%90%E5%8E%9F%E7%90%86%EF%BC%88%E7%AC%AC3%E7%89%88%EF%BC%89?x-oss-process=style/small_size_rule" style="">
+</div>
+
+本书通过对一台实际计算机的剖析，使读者更深入地理解总线是如何将计算机各大部件互连成整机的。以我的阅读体验来看，本书内容通俗易懂，且辅以例题，是一本好书，是山大832的参考资料之一。
+
+全书共分为4篇，大体结构如下：
+
+- **第1篇**：介绍计算机的基本组成、发展及应用；
+- **第2篇**：介绍系统总线、存储器（包括主存储器、高速缓冲存储器和辅助存储器）和输入输出系统；
+- **第3篇**：介绍CPU的特性、结构和功能，包括计算机的算术逻辑单元、指令系统、指令流水、RISC技术及中断系统；
+- **第4篇**：介绍控制单元的功能和设计，包括时序系统以及采用组合逻辑和微程序设计控制单元的设计思想与实现措施。
+
+## 我如何学习本书
+
+由于我买书是为了考研，我学习的方法是对照考研大纲学习，而不是对本书全部内容进行学习，因此我的学习笔记只涉及本书的部分内容。
