--- a/life/content/blog/thinking/不进则退.md
+++ b/life/content/blog/thinking/不进则退.md
@@ -3,11 +3,11 @@ title: 不进则退
 date: "2023-09-28"
 ---
 
-### 善意的谎言
+##  善意的谎言
 
 我的父母总是在我的每个冲刺阶段告诉我，现在正是关键时期，再努力努力，之后就解放了。这句话听起来是善意的、是在疏解压力，但其实，这句话蛮有副作用的，概括来说，是一则善意的谎言。
 
-### 谎言的后果
+##  谎言的后果
 
 起初，听到这句话让我对未来抱有不切实际的幻想。当他们所描述的未来真正到来的时候，我会认为自己理所当然应该“解放”一下。
 
@@ -15,7 +15,7 @@ date: "2023-09-28"
 
 在我“解放”自己的同时，有计划有目标的人会超越现在的他们自己，冲着新目标努力，下一次的竞争中我会处于非常被动的位置。尤其是当这种竞争涉及“积累”的时候，一步失误会导致全盘皆输。
 
-### 解决方法
+##  解决方法
 
 我认为解决这个问题的方法如下：
 
