--- a/life/content/blog/thinking/正确看待“使用价值”.md
+++ b/life/content/blog/thinking/正确看待“使用价值”.md
@@ -5,17 +5,17 @@ date: "2023-09-10"
 
 很长一段时间，我都认为租用物品没有安全感，认为自己拥有才是最靠谱的，但是最近我越来越发现其实一切都是租赁的，没有什么是真正属于自己的。
 
-### 从电脑看所有权
+##  从电脑看所有权
 
 我们在购买电脑时，虽然永久拥有了电脑，但是由于其总会在一段时间后被淘汰，我们购买的实际上是电脑在几年内的价值产出。
 
 之前我一直没有意识到这一点，或者说，潜意识里是明白的，但是主观上一直在抗拒。当我真正接受这一点时，我有一种时间上的紧迫感：我购买电脑所花的钱值与不值，主要部分不在于其性价比是否优秀，而在于我在它的使用年限内是否发挥出了其应有的价值，我应该在有限的时间内尽可能让其发挥最大价值！
 
-### 重新审视物我关系
+##  重新审视物我关系
 
 当我意识到这一点，我感觉长久以来的物我观念被改变了：*我们购买物品是为了使用，而不是为了拥有，我们购买的是使用权，而不是所有权*。之前我在《断舍离》中看到过这样的观点，但是当时我并没有真正理解，现在我终于理解了。
 
-### 一切都是租用关系的
+##  一切都是租用关系的
 
 > 肉体是拿来用的，不是拿来伺候的。—— 蔡崇达《皮囊》
 
