--- a/life/content/blog/travel/编码齐民_麦岛落日.md
+++ b/life/content/blog/travel/编码齐民_麦岛落日.md
@@ -31,15 +31,13 @@ date: "2023-10-15"
 
 ![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E7%BC%96%E7%A0%81%E9%BD%90%E6%B0%912.jpg?x-oss-process=style/small_size_rule)
 
-上面这张作品我比较喜欢，他用抽象地寥寥数笔勾勒出水的形态。岩石通过图像的重叠表现得更加尖锐，背景用大红色做渲染，像是绝境的环境。
+上面这张作品我比较喜欢，他用抽象的寥寥数笔勾勒出水的形态。通过图像的重叠将岩石表现得更加尖锐，背景用大红色做渲染，像是绝境的环境。
 
-作品名叫《*开放夏日的尾声*》，“开放”我联想到的是计算机领域的开源，“夏日的尾声”像是开源生态结束了，计算机领域从开源变为封闭，现在时代是开源的最后时代，既美丽又悲惨。
-
-我有另一种更广的理解，可能整体上“开放夏日”是代表人类的某种美好的生活状态，现在结束了。无论哪种理解，我都觉得名字十分具有想象的空间，是一个非常好的名字，并且和作品表现的内容十分相衬。
+作品名叫《*开放夏日的尾声*》，可能整体上“开放夏日”是代表人类的某种美好的生活状态，现在结束了。我觉得名字十分具有想象的空间，是一个非常好的名字，并且和作品表现的内容十分相衬。
 
 ## 社保主题的公园
 
-上午逛完竟然看到“社会保障卡主题公园”，觉得好搞笑。我印象中，一些景点为了吸引顾客会和品牌联名，这里政府工作人员的想法好新颖，巧用“联名”以推广社保卡。
+上午逛完竟然看到“社会保障卡主题公园”，觉得好好笑。我印象中，一些景点为了吸引顾客会和品牌联名，这里政府工作人员的想法好新颖，巧用“联名”以推广社保卡。
 
 ![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E7%A4%BE%E4%BF%9D%E5%8D%A1%E5%85%AC%E5%9B%AD.jpg?x-oss-process=style/small_size_rule)
 
@@ -54,3 +52,20 @@ date: "2023-10-15"
 
 店员态度很好，十分客气，饭菜很可口，味道很香且量很大，吃的很爽，心满意足。
 
+## 麦岛落日
+
+久闻小麦岛大名，今天终于来了，通过狭长的入口，我们随着人流登岛，在日落的方向找了一片草地。原处有人用音响放民谣，傍晚的海风拂面，一切都表现得轻松而又惬意。
+
+![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E5%B0%8F%E9%BA%A6%E5%B2%9B%E7%9C%8B%E6%97%A5%E8%90%BD.jpg?x-oss-process=style/small_size_rule)
+
+遗憾在落日的方向有浓雾，没有办法看到落日与地平线的交叠。太阳像是落到了一团雾里，天色才逐渐暗下来。
+
+## 万象城绝顶五花肉
+
+晚上，我们坐公交去万象城“厨子下山·回锅肉”吃了回锅肉，每一片肉都沁着油香，十分美味，吃完一片肉能高兴很久。点的猪血豆腐有点辣，但是确实很下饭。
+
+![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E4%B8%87%E8%B1%A1%E5%9F%8E%E4%BA%94%E8%8A%B1%E8%82%89.jpg?x-oss-process=style/small_size_rule)
+
+## 返程
+
+今天的旅行到这里就落下帷幕了，在返程的地铁上脚略痛，身体有些酸累，但是心情难得这般放松了。今天看了很多风景，见识了更有趣的世界，将是一段很美好的回忆。
