--- a/tech/docs/Basement/SFTang-Computer-Consist/高速缓冲存储器.md
+++ b/tech/docs/Basement/SFTang-Computer-Consist/高速缓冲存储器.md
@@ -25,41 +25,12 @@
 
 ### 直接映射
 
-直接映射中，主存地址如下分割：
-
-|主存块组数(主存字块标记)|Cache块数(Cache字块地址)|字块内索引(字块内地址)|
-|:---:|:---:|:---:|
-
-Cache地址如下分割：
-
-|主存块组数(主存字块标记)|字块内索引(字块内地址)|
-|:---:|:---:|
 
 ### 全相联映射
 
-全相联映射中，主存地址如下分割：
-
-|主存块数(主存字块标记)|字块内索引(字块内地址)|
-|:---:|:---:|
-
-Cache地址如下分割：
-
-|主存块数(主存字块标记)|字块内索引(字块内地址)|
-|:---:|:---:|
-
 ### 组相联映射
 
-组相联映射中，主存地址如下分割：
-
-|主存地址剩余字段(主存字块标记)|Cache组数(组地址)|字块内索引(字块内地址)|
-|:---:|:---:|:---:|
-
-Cache地址如下分割：
-
-|主存地址剩余字段(主存字块标记)|字块内索引(字块内地址)|
-|:---:|:---:|
-
-这里的映射规则比较难理解，是以Cache组数为模运算，映射到余数组，具体可以看书 P119 图 4.56。
+具体可以看书 P119 图 4.56。
 
 ::: info 例题
 书第120页，例4.8
