--- a/tech/docs/Face-Warp/My-Experience/2023-Winter/2023-11-Pico.md
+++ b/tech/docs/Face-Warp/My-Experience/2023-Winter/2023-11-Pico.md
@@ -21,9 +21,13 @@
 
 ## 进度
 
-- 2023 年 11 月 7 日，官网投递，投递简历：[查看](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/profile/%E5%AE%9E%E4%B9%A0%E7%AE%80%E5%8E%86-%E5%BC%A0%E6%99%AF%E8%B5%AB-%E4%B8%AD%E5%9B%BD%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%EF%BC%88%E5%8D%8E%E4%B8%9C%EF%BC%89-%E5%AD%97%E8%8A%82%E8%B7%B3%E5%8A%A8PICO.pdf)，无内推码；
-- 2023 年 11 月 7 日至 11 月 8 日白天，官网显示 `简历筛选`；
-- 11 月 8 日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
-- 11 月 9 日中午，HR电话约面试，我以“考研”和“面试准备”为理由将时间定在下周四下午三点，通过飞书面试；
-- 电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
+2023 年 11 月 7 日，官网投递，投递简历：[查看](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/profile/%E5%AE%9E%E4%B9%A0%E7%AE%80%E5%8E%86-%E5%BC%A0%E6%99%AF%E8%B5%AB-%E4%B8%AD%E5%9B%BD%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%EF%BC%88%E5%8D%8E%E4%B8%9C%EF%BC%89-%E5%AD%97%E8%8A%82%E8%B7%B3%E5%8A%A8PICO.pdf)，无内推码；
+
+2023 年 11 月 7 日至 11 月 8 日白天，官网显示 `简历筛选`；
+
+11 月 8 日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
+
+11 月 9 日中午，HR电话约面试，我以“考研”和“面试准备”为理由将时间定在下周四下午三点，通过飞书面试；
+
+电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
 
