--- a/tech/docs/Face-Warp/Enterprise/Byte-Dance/Pico-2022.md
+++ b/tech/docs/Face-Warp/Enterprise/Byte-Dance/Pico-2022.md
@@ -1,4 +1,4 @@
-# 2022 年春 PICO 青岛面经 1
+# 2022 年春 PICO 青岛面经
 
 https://blog.csdn.net/weixin_43735161/article/details/123669048?spm=1001.2014.3001.5502
 
@@ -29,42 +29,42 @@ C程序从编译到运行的过程说一下
 
 // 二面
 〇、简历相关
-	0、自我介绍
-	1、讲一下你的项目中的人脸识别程序
-	2、平常用什么开发语言（我说c++比较多
+0、自我介绍
+1、讲一下你的项目中的人脸识别程序
+2、平常用什么开发语言（我说c++比较多
 一、c++
-	3、c++ STL库中vector和list区别
-	4、c++ 结构体与类的区别（我没答上来 面试官提示说类内权限 我就回答类默认私有 结构体默认公有）
-	5、多态是什么 怎么实现 需要基类的函数前面加什么？
-	6、静态成员是什么
-	7、静态函数能否访问普通成员变量
+3、c++ STL库中vector和list区别
+4、c++ 结构体与类的区别（我没答上来 面试官提示说类内权限 我就回答类默认私有 结构体默认公有）
+5、多态是什么 怎么实现 需要基类的函数前面加什么？
+6、静态成员是什么
+7、静态函数能否访问普通成员变量
 二、数据结构
-	8、举几个排序算法的例子 说一下他们的空间时间复杂度
+8、举几个排序算法的例子 说一下他们的空间时间复杂度
 三、计算机组成原理
-	9、说一下浮点数的格式
-	10、ASCII和Unicode有什么区别（后者兼容前者）
-	11、UTF-8中文字符和英文字符占几个字节？
-	12、什么是内存对齐？
-	13、假如一个结构体有int char float 说一下它对齐的方式
-	14、内存空间分为几个区 举这几个区的例子
-	15、成员函数里定义的静态成员存储在哪个区
+9、说一下浮点数的格式
+10、ASCII和Unicode有什么区别（后者兼容前者）
+11、UTF-8中文字符和英文字符占几个字节？
+12、什么是内存对齐？
+13、假如一个结构体有int char float 说一下它对齐的方式
+14、内存空间分为几个区 举这几个区的例子
+15、成员函数里定义的静态成员存储在哪个区
 四、计算机操作系统
-	16、死锁是什么
-	17、线程与进程的区别
-	18、线程之间如何进行通信
-	19、线程之间如何实现同步
-	20、线程之间的空间都是可以共享的吗（存在栈里的不行，全局、堆里的不行）
+16、死锁是什么
+17、线程与进程的区别
+18、线程之间如何进行通信
+19、线程之间如何实现同步
+20、线程之间的空间都是可以共享的吗（存在栈里的不行，全局、堆里的不行）
 五、计算机网络
-	21、计算机网络的四层结构（五层也行
-	22、说一下每层都有什么协议
-	23、路由器工作在什么层
+21、计算机网络的四层结构（五层也行
+22、说一下每层都有什么协议
+23、路由器工作在什么层
 六、算法题
-	24、全排列
-	25、链表倒数第k个元素
+24、全排列
+25、链表倒数第k个元素
 七、其他
-	26、你参加的竞赛是什么形式 你和队友在解题过程中遇到不会的题怎么办？
-	27、你还有什么问题？
-	28、你的职业规划？（回答进大厂）
+26、你参加的竞赛是什么形式 你和队友在解题过程中遇到不会的题怎么办？
+27、你还有什么问题？
+28、你的职业规划？（回答进大厂）
 ```
 
 ## C程序从编译到运行的过程说一下
@@ -408,16 +408,16 @@ https://blog.csdn.net/ThinkWon/article/details/102021274
 
 ---
 
-**根本区别**：进程是操作系统资源分配的基本单位，而线程是处理器任务调度和执行的基本单位
+**根本区别**：进程是操作系统资源分配的基本单位，而线程是处理器任务调度和执行的基本单位；
 
-**资源开销**：每个进程都有独立的代码和数据空间（程序上下文），程序之间的切换会有较大的开销；线程可以看做轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立的运行栈和程序计数器（PC），线程之间切换的开销小。
+**资源开销**：每个进程都有独立的代码和数据空间（程序上下文），程序之间的切换会有较大的开销；线程可以看做轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立的运行栈和程序计数器（PC），线程之间切换的开销小；
 
-**包含关系**：如果一个进程内有多个线程，则执行过程不是一条线的，而是多条线（线程）共同完成的；线程是进程的一部分，所以线程也被称为轻权进程或者轻量级进程。
+**包含关系**：如果一个进程内有多个线程，则执行过程不是一条线的，而是多条线（线程）共同完成的；线程是进程的一部分，所以线程也被称为轻权进程或者轻量级进程；
 
-**内存分配**：同一进程的线程共享本进程的地址空间和资源，而进程之间的地址空间和资源是相互独立的
+**内存分配**：同一进程的线程共享本进程的地址空间和资源，而进程之间的地址空间和资源是相互独立的；
 
-**影响关系**：一个进程崩溃后，在保护模式下不会对其他进程产生影响，但是一个线程崩溃整个进程都死掉。所以多进程要比多线程健壮。
+**影响关系**：一个进程崩溃后，在保护模式下不会对其他进程产生影响，但是一个线程崩溃整个进程都死掉。所以多进程要比多线程健壮；
 
-**执行过程**：每个独立的进程有程序运行的入口、顺序执行序列和程序出口。但是线程不能独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制，两者均可并发执行
+**执行过程**：每个独立的进程有程序运行的入口、顺序执行序列和程序出口。但是线程不能独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制，两者均可并发执行；
 
 ## 进程间通信方式
