--- a/tech/docs/Face-Warp/Real-Face-Warp/From-Internet/2022-pico.md
+++ b/tech/docs/Face-Warp/Real-Face-Warp/From-Internet/2022-pico.md
@@ -1,10 +1,4 @@
-# 2022 年春 PICO 青岛面经
-
-https://blog.csdn.net/weixin_43735161/article/details/123669048?spm=1001.2014.3001.5502
-
-> 去年（2021年）12月，考研前几天，导员儿在群里发了字节的实习。投了一下，一直没消息，以为凉了，没想到二月底给我打电话让我约面试…因为在同时准备毕设和复试，就一直没有约面试。无奈HR一直催，说在春招要快一些。于是约了3月14日的一面。
-
-如果年末投递日常实习，HR发面试消息要在年后，而且面试之前有一段时间可以补面经。
+# 2022春季字节跳动PICO青岛面经 
 
 ```
 // 一面
@@ -66,6 +60,7 @@ C程序从编译到运行的过程说一下
 27、你还有什么问题？
 28、你的职业规划？（回答进大厂）
 ```
+
 
 ## C程序从编译到运行的过程说一下
 
@@ -421,3 +416,5 @@ https://blog.csdn.net/ThinkWon/article/details/102021274
 **执行过程**：每个独立的进程有程序运行的入口、顺序执行序列和程序出口。但是线程不能独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制，两者均可并发执行；
 
 ## 进程间通信方式
+
+[原文链接](https://blog.csdn.net/weixin_43735161/article/details/123669048?spm=1001.2014.3001.5502)
