--- a/tech/docs/Face-Warp/Real-Face-Warp/Mine/2023-11-Pico.md
+++ b/tech/docs/Face-Warp/Real-Face-Warp/Mine/2023-11-Pico.md
@@ -27,7 +27,123 @@
 
 11 月 8 日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
 
-11 月 9 日中午，HR电话约面试，我以“考研”和“面试准备”为理由将时间定在下周四下午三点，通过飞书面试；
+11 月 9 日中午，HR 电话约面试，我以准备面试为理由将时间定在下周四下午三点飞书面试。电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
 
-电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
+11 月 16 日面试，只进行了一面，网上查至少三面，想应该是寄了，当天依然显示 `面试中`。
+
+
+## 面试复盘
+
+出了一件特别糟心的事，我给面试定了一个飞书日历的日程，飞书日程默认带一个会议，到点的时候视频会议界面显示的是我的日历会议，而不是面试会议，面试会议链接要从邮件里面进。
+
+我 2:58 进了那个会议了，结果等到 3:07 面试官都没有出现。不知道哪里有什么问题，以为是面试官迟到了，给我发的邮件说面试官 10 分钟内没有出现再联系 HR，我等到 3:07 后收到 HR 电话问为什么没参加面试， 我说我已经在里面十分钟了，双方都很惊讶，HR 重发了邮件，我点击新的链接进入了会议，面试官说我迟到了，有点影响心态。
+
+```
+面试官：Android 方面实现过哪些功能？
+我：MPAndroidChart 绘制图表，调用 API，根据数据库里实时更新的数据绘制图。
+
+面试官：有没有系统地学过安卓？
+我：跟过一个学校的课程，老师主要是提供 demo 让我们跑通去理解这些课程的，我在报了实习之后，学习面经，看书后发现很多会用但不够理解，面对考研压力大，现在每天抽两个小时再过一遍 Android。
+
+面试官：考研考不上怎么打算的？
+我：考不上明年上半年实习，下半年二战，但应该可以考上。
+
+面试官：考什么学校？
+我：报的山东大学，地理位置不是特别竞争激烈，希望大一些。
+
+面试官：Activity生命周期？
+我：`onCreate()` 创造，`onPause()` 暂停，`onDestroy()` 销毁生命周期，只用过 `onCreate()` 函数。
+
+面试官：三大组建，surface 用过吗？
+我：没有用过 surface；
+
+面试官：那有没有用过超链接什么的？
+我：用过 WSLive 的 RTMP 推流，(描述了推流流程)；MySQL 的 JDBC 远程访问。
+
+面试官：代码写在 Activity 中的吗？
+我：(有点听错了)写在 handler 中，用多线程实现的。
+
+面试官：怎么判断当前线程是不是主线程呢？
+我：不太知道，只会使用多线程(尬笑)。
+
+面试官：除了 Activity 还会写什么啊？
+我：会写 Fragment、drawable 自定义图形、Activity 布局、页面跳转、数据传递、多线程、访问数据库、访问 AI 接口、循环列表 Adapter 显示滑动的一列数据、视频播放。
+面试官：会写一些简单的页面什么的。
+我：对对对。
+
+面试官：Android 界面的四大布局
+我：RelativeLayout、LinearLayout，我目前主要是能用就可以，理论总结不够，通过 Adapter 实现的 RecycleLayout；
+
+面试官：论文写完了吗？
+我：毕业设计大四开始，认为实习更重要一些，把 Android 再系统学一遍，再完善一下那个 Android 项目也能做毕业设计。
+面试官：对，感觉只是停留在会用的阶段，还是应该系统地学一遍。
+
+面试官：问一些 Java 相关的知识，Java 的 interface 和抽象类的区别？
+我：Interface 提供接口，告诉程序员我要实现一些功能，但具体怎么实现你们去做就可以了，抽象类有点记不起来了。
+
+面试官：String 可以被继承吗？
+我：不知道，有点遗忘。
+
+面试官：C/C++ 的问题，i++ 和 ++i 的区别？
+我：(正确回答)
+
+面试官：UDP 和 TCP 之间的区别
+我：UDP 是无连接的，具体有没有收到是不关心的，TCP 是先建立连接，再通信；TCP 应用于需要安全性的连接，UDP 应用于需要快速的应用中，如游戏；TCP 有顺序，UDP 无顺序；
+
+面试官：写一道算法吧，
+我：(基本思路没问题，但细节没有做好，没法运行，我放到下面了)
+
+<!-- 反问环节 -->
+
+面试官：我们面试就到这里，有什么问题吗？
+我：投递面试之后，看了各种面经，感觉离 Offer 差很多，就买了几本 Android 的书，看还能补救吗，最后发现是整个发现知识体系的问题，不足以拿到 Offer，更多地是把这次面试当成一次经历，能力有些自卑，想问问对我有什么建议吗？
+面试官：对 Android 这边没有系统的学习，更多的是需要用什么就直接在网上挖代码运行，要做到不止要会用，还要知道怎么实现的；
+
+我：我的代码有什么问题吗？
+面试官：整体上思路没有问题，边界情况没有考虑到，可能只是过于紧张的，相信时间够的情况下会写好的。
+
+```
+
+
+我在复盘面试时，对上述代码进行了修改，修改代码如下，`+` 和 `-` 表示的是相对于面试中写出的代码的修改，`+` 代表增加的内容，`-` 代表删除的内容。
+
+```cpp
+#include <iostream>
+using namespace std;
+
+int Search(int arr[], int min, int max, int target, int & flag){
+    if((max+min)/2 == min && !flag){
+        return -1;
+    }
+    else{
+        if(arr[(min+max)/2] == target){
+            flag = 1;
+            return (min+max)/2;
+        }
+        else if(arr[(min+max)/2] > target){
+            Search(arr, min, (min+max)/2, target, flag); // [!code --]
+            return Search(arr, min, (min+max)/2, target, flag); // [!code ++]
+        }
+        else{
+            Search(arr, (min+max)/2, max, target, flag); // [!code --]
+            return Search(arr, (min+max)/2, max, target, flag); // [!code ++]
+        }
+    }
+}
+
+int main(){
+    int target;
+    cin >> target; // [!code ++]
+    int flag = 0;
+    int n;
+    cin >> n;
+    int arr[n];
+    for(int i = 0; i < n; i++){
+        arr[i] = i;
+    }
+    cout << Search(arr, 0, n-1, target, flag);
+    return 0;
+}
+```
+
 
