--- a/life/content/blog/FaceWrap/2023-11-Pico.md
+++ b/life/content/blog/FaceWrap/2023-11-Pico.md
@@ -1,6 +1,10 @@
+---
+title: 字节跳动(PICO)Android开发
+date: "2023-11-16"
+---
+
 ![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/tech_blog_img/PICO%E9%9D%A2%E8%AF%95%E6%A8%A1%E7%89%88%E4%B8%93%E7%94%A8%E5%9B%BE%2811-09-13-38-53%29.png?x-oss-process=style/small_size_rule)
 
-# 字节跳动 (PICO) Android 开发
 
 ## 职位信息
 
@@ -21,15 +25,11 @@
 
 ## 进度
 
-2023 年 11 月 7 日，官网投递，投递简历：[查看](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/profile/%E5%AE%9E%E4%B9%A0%E7%AE%80%E5%8E%86-%E5%BC%A0%E6%99%AF%E8%B5%AB-%E4%B8%AD%E5%9B%BD%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%EF%BC%88%E5%8D%8E%E4%B8%9C%EF%BC%89-%E5%AD%97%E8%8A%82%E8%B7%B3%E5%8A%A8PICO.pdf)，无内推码；
-
-2023 年 11 月 7 日至 11 月 8 日白天，官网显示 `简历筛选`；
-
-11 月 8 日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
-
-11 月 9 日中午，HR 电话约面试，我以准备面试为理由将时间定在下周四下午三点飞书面试。电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
-
-11 月 16 日面试，只进行了一面，网上查至少三面，想应该是寄了，当天依然显示 `面试中`。
+- 2023 年 11 月 7 日，官网投递，投递简历：[查看](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/profile/%E5%AE%9E%E4%B9%A0%E7%AE%80%E5%8E%86-%E5%BC%A0%E6%99%AF%E8%B5%AB-%E4%B8%AD%E5%9B%BD%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%EF%BC%88%E5%8D%8E%E4%B8%9C%EF%BC%89-%E5%AD%97%E8%8A%82%E8%B7%B3%E5%8A%A8PICO.pdf)，无内推码；
+- 2023年11月7日至11月8日白天，官网显示 `简历筛选`；
+- 11月8日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
+- 11月9日中午，HR电话约面试，我以准备面试为理由将时间定在下周四下午三点飞书面试。电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
+- 11月16日面试，只进行了一面，网上查至少三面，想应该是寄了，当天依然显示`面试中`。
 
 
 ## 面试复盘
