--- a/notebook/docs/Program/SDU/2022.md
+++ b/notebook/docs/Program/SDU/2022.md
@@ -1,9 +1,40 @@
 # 2022年山东大学专硕真题分析
 
+## 简答题
+
+### 01 链表
+
+> 双链表结点结构如下，求 *删除P所指节点* 和 *在P后插入节点* 的指针变化
+>
+> | <- llink | info | rlink -> |
+> |:---:  |:---: |:---:  |
+
+我少考虑了新节点的指针情况，解决此类问题的关键是画正确的图，不要遗忘情况。
+
+### 03 B树
+
+> 一个空2-3树，依次插入2、1、5、6、7、4、3、8、9，画出插入后的树的状态，之后删除6和9，画出删除后树的状态。
+
+首先对2-3树的概念要明确，其本质上是3阶B树。
+
+- 最少 1 个节点($\lceil\frac{n}{2}\rceil-1$)，最少 2 个子树($\lceil\frac{n}{2}\rceil$)
+- 最多 2 个节点($n-1$)，最多 3 个子树($n$)
+
+#### 1. B树的插入
+
+插入对应的孩子节点，多的话需要裂开，取 $\lceil\frac{n}{2}\rceil$ 结点融入父节点，其余节点成为父节点中的该关键字两边的子树。
+
+#### 2. B树的删除
+
+- **删除非叶子节点**：用左子节点(前驱节点)代替该节点，转为删该叶子节点(前驱节点)；
+- **删除叶子节点**：不能直接删除的话，分为兄弟够借和兄弟不够借；
+  - **兄弟够借**：父节点代替该节点，兄弟节点代替父节点；
+  - **兄弟不够借**：父节点加入兄弟节点。
+
 
 ## 程序设计题
 
-### 01
+### 01 链表-头插法
 
 > 在包含n个元素的单链表中，把第left个元素和第right个元素中间部分逆置(不包括left和right)，最后返回单链表的头结点(1<=left<right<=n)。设计时间和空间都尽可能高效的算法，并计算时间复杂度和空间复杂度。
 
@@ -73,3 +104,80 @@ void Reversel(LNode *&L, int left, int right){
 ```
 
 时间复杂度为 $O(n)$，空间复杂度为 $O(1)$。
+
+### 02 最大堆
+
+> 为最大堆MaxHeap类设计一个共享成员函数ChangeMax(x)，将当前最大元素改为元素x，x的值可能大于或小于当前最大元素的值，叙述算法思想并给出算法实现。给出算法的时间复杂度。
+
+这道题考察最大堆的向下排序和向上排序，向下排序用于 *构建初识堆* 和 *输出元素后重新堆排序*，向上排序用于 *插入新节点后的重新排序*。此代码需要进行记忆，现写写不出来。
+
+#### 1. 向下调整
+
+向下调整将元素k为根的子树进行调整，用于建立初始根
+
+```cpp
+void HeadAdjust(ElemType  A[], int k, int len){
+    // 将元素k为根的子树进行调整
+    A[0] = A[k];
+    for(int i = 2*k; i <= len; i *= 2){
+        // 选两个孩子中较大的节点
+        if(i < len && A[i]<A[i+1])
+            i++;
+
+        // 
+        if(A[0] >= A[i])
+            break;
+        else{
+            A[k] = A[i];
+            k = i;
+        }
+    }
+    A[k] = A[0];
+}
+```
+
+#### 2. 构建初始堆
+
+构建初始堆需要在向下排序的基础上从下往上遍历堆，理由是每次向下排序只是**把根节点往下移动**，只能移动其中一个子孩子，另一个子孩子无法被排序，因此要依次遍历每一个父节点，将其为根的子树进行调整。
+
+```cpp
+void BuildMaxHeap(ElemType A[], int len){
+    for(int i = len/2; i > 0; i--)
+        HeadAdjust(A, i, len);
+}
+```
+
+#### 3. 向上调整
+
+向上排序用于 *插入新节点后的重新排序*。
+
+```cpp
+void AdjustUp(ElemType A[], int k){
+    A[0] = A[k];
+    int i = k / 2;
+    while(i > 0 && A[i]<A[0]){
+        A[k] = A[i];
+        k = i;
+        i = k/2;
+    }
+    A[k] = A[0];
+}
+```
+
+#### 4. 本题题解
+
+本题题解使用了上述方法。
+
+```cpp
+void ChangeMax(ElemType x){
+    while(x<A[1]){
+        A[1] = A[len];
+        len --;
+        HeadAdjust(A, 1, len);
+    }
+    len++;
+    A[len] = x;
+    AdjustUp(A, len);
+}
+```
+
