--- a/notebook/docs/Basement/SDU/2022.md
+++ b/notebook/docs/Basement/SDU/2022.md
@@ -4,7 +4,7 @@
 
 ## 选择题
 
-### 03
+### 03 数据的存储方式
 
 > 存储器中地址号分别为1000#、1001#、1002#、1003#的4个连续存储单元，分别保存的字节数据是1A、2B、3C、4D，如果数据字长为32位,存储器采用的是小端对齐模式，则这4个存储单元存储的数据值应被解析为?
 
@@ -14,7 +14,7 @@
 
 ## 简答题
 
-### 02
+### 02 IO设备
 
 > 中断方式和DMA方式的异同点？各应用于哪些场合？
 
@@ -39,7 +39,7 @@
 - 中断具有对异常事件的处理能力，DMA适用告诉外设的成组数据传送。
 
 
-### 03
+### 03 校验码
 
 > 按配偶原则配置0011的汉明码
 
@@ -87,7 +87,7 @@ $P_3P_2P_1$ 值为 $100$，即 $5$，说明第 $5$ 位出错。
 
 :::
 
-### 04
+### 04 指令设计
 
 > 某计算机字长16位，主存容量为64K字，采用单字长单地址指令，共有64条指令，试采用四种寻址方式（立即、直接、基值、相对）设计指令格式，并写出这四种寻址方式的有效地址计算方法。
 
