--- a/notebook/docs/Basement/SDU/2023.md
+++ b/notebook/docs/Basement/SDU/2023.md
@@ -1,8 +1,10 @@
 # 2023年山东大学专硕真题分析
 
+[[TOC]]
+
 ## 选择题
 
-### 04
+### 04 存储体提速
 
 
 > 低位交叉编址的存储器实质上能（ ）独立的读写操作。 A.一次并行执行 B.多次并行执行 C.一次串行执行 D.多次串行执行
@@ -29,9 +31,7 @@
 连续读取 $n$ 个字需要的时间为 $t_1 = T + (n-1)\tau$；
 :::
 
-### 05
-
-
+### 05 数据的存放方式
 
 > 某计算机存储器按字节变址，采用小端方式存放数据。假定编译器规定 `int` 型和 `short` 型长度分别为 32 位和 16 位，并且数据按边界对齐存储。某 C 语言程序段如下：
 >```cpp
@@ -54,7 +54,7 @@
 结构体**每个成员相对于起始地址的偏移**能够被其**自身大小**整除，如果不能则在前一个成员后面补充字节；
 :::
 
-### 06
+### 06 Cache 缺失率
 
 > 有如下 C 语言程序段：
 > ```cpp
@@ -107,9 +107,7 @@ Cache地址如下分割：
 这里的映射规则是以Cache组数为模运算，映射到余数对应的组。
 :::
 
-### 08
-
-
+### 08 总线传输速率
 
 > 某同步总线采用数据线和地址线复用方式。其中地址/数据线有32根，总伐时钟频率为66MHZ，每个时钟同期传送两次数据。（上升沿和下降沿各传送一次数据）该总线的最大数据传输率是（总线带宽）（ ）。A.132MB/S B.264MB/S C.528MB/S D.1056MB/S
 
@@ -125,7 +123,7 @@ Cache地址如下分割：
 
 ## 简答题
 
-### 01
+### 01 存储器的层次
 
 > 存储器的层次结构主要体现在什么地方？这些层次主要解决什么问题？计算机如何管理这些层次？
 
@@ -135,7 +133,7 @@ Cache地址如下分割：
 
 如何管理？**我的回答**：速度越快、容量越小的存储器离计算机CPU越近，优先与CPU进行数据交换，而辅助存储只能与内存进行直接数据交换。**参考答案**：主存与Cache之间的信息调度全部由硬件自动完成，主存与辅存层次的调度通过虚拟存储技术实现，将主存与辅存的一部分通过软硬结合的方式形成虚拟存储器，两个层次上的调度对于程序员都是透明的。
 
-### 03
+### 03 IO编址
 
 > I/O 有哪些编址方式，各有何特点？
 
@@ -143,7 +141,7 @@ Cache地址如下分割：
 
 ## 设计题
 
-### 01
+### 01 存储器与CPU的连接
 
 > 设CPU共有16根地址线，8根数据线，并用$\overline{MREQ}$作访存控制信号，$\overline{WR}$作为读写命令信号(高电平为读，,低电平为写)。现有下列存储芯片：1Kx4位RAM 、4Kx8位RAM、2Kx8位ROM以及74138译码器和各种门电路。主存地址空间分配：8000H~87FFH为系统程序区；8800H~8BFFH为用户程序区。回答下列问题：
 > 
