--- a/notebook/docs/Program/SDU/2022.md
+++ b/notebook/docs/Program/SDU/2022.md
@@ -6,12 +6,12 @@
 
 ### 01 链表
 
-> 双链表结点结构如下，求 *删除P所指节点* 和 *在P后插入节点* 的指针变化
+> 双链表结点结构如下，求 *删除P所指结点* 和 *在P后插入结点* 的指针变化
 >
 > | <- llink | info | rlink -> |
 > |:---:  |:---: |:---:  |
 
-我少考虑了新节点的指针情况，解决此类问题的关键是画正确的图，不要遗忘情况。
+我少考虑了新结点的指针情况，解决此类问题的关键是画正确的图，不要遗忘情况。
 
 ### 03 B树
 
@@ -19,19 +19,19 @@
 
 首先对2-3树的概念要明确，其本质上是3阶B树。
 
-- 最少 1 个节点($\lceil\frac{n}{2}\rceil-1$)，最少 2 个子树($\lceil\frac{n}{2}\rceil$)
-- 最多 2 个节点($n-1$)，最多 3 个子树($n$)
+- 最少 1 个结点($\lceil\frac{n}{2}\rceil-1$)，最少 2 个子树($\lceil\frac{n}{2}\rceil$)
+- 最多 2 个结点($n-1$)，最多 3 个子树($n$)
 
 #### 1. B树的插入
 
-插入对应的孩子节点，多的话需要裂开，取 $\lceil\frac{n}{2}\rceil$ 结点融入父节点，其余节点成为父节点中的该关键字两边的子树。
+插入对应的孩子结点，多的话需要裂开，取 $\lceil\frac{n}{2}\rceil$ 结点融入父结点，其余结点成为父结点中的该关键字两边的子树。
 
 #### 2. B树的删除
 
-- **删除非叶子节点**：用左子节点(前驱节点)代替该节点，转为删该叶子节点(前驱节点)；
-- **删除叶子节点**：不能直接删除的话，分为兄弟够借和兄弟不够借；
-  - **兄弟够借**：父节点代替该节点，兄弟节点代替父节点；
-  - **兄弟不够借**：父节点加入兄弟节点。
+- **删除非叶子结点**：用左子结点(前驱结点)代替该结点，转为删该叶子结点(前驱结点)；
+- **删除叶子结点**：不能直接删除的话，分为兄弟够借和兄弟不够借；
+  - **兄弟够借**：父结点代替该结点，兄弟结点代替父结点；
+  - **兄弟不够借**：父结点加入兄弟结点。
 
 
 ## 程序设计题
@@ -49,7 +49,7 @@
 #### 1. 我的解答
 
 ```cpp
-void Reserve(Node * left, Node * right){ // 没看清题目要求是“把第left个元素和第right个元素中间部分逆置”，以为是两个节点
+void Reserve(Node * left, Node * right){ // 没看清题目要求是“把第left个元素和第right个元素中间部分逆置”，以为是两个结点
     Node * target = left;
     Node * stop = right;
     Node * newStart = new LinearList();
@@ -111,7 +111,7 @@ void Reversel(LNode *&L, int left, int right){
 
 > 为最大堆MaxHeap类设计一个共享成员函数ChangeMax(x)，将当前最大元素改为元素x，x的值可能大于或小于当前最大元素的值，叙述算法思想并给出算法实现。给出算法的时间复杂度。
 
-这道题考察最大堆的向下排序和向上排序，向下排序用于 *构建初识堆* 和 *输出元素后重新堆排序*，向上排序用于 *插入新节点后的重新排序*。此代码需要进行记忆，现写写不出来。
+这道题考察最大堆的向下排序和向上排序，向下排序用于 *构建初识堆* 和 *输出元素后重新堆排序*，向上排序用于 *插入新结点后的重新排序*。此代码需要进行记忆，现写写不出来。
 
 #### 1. 向下调整
 
@@ -122,7 +122,7 @@ void HeadAdjust(ElemType  A[], int k, int len){
     // 将元素k为根的子树进行调整
     A[0] = A[k];
     for(int i = 2*k; i <= len; i *= 2){
-        // 选两个孩子中较大的节点
+        // 选两个孩子中较大的结点
         if(i < len && A[i]<A[i+1])
             i++;
 
@@ -140,7 +140,7 @@ void HeadAdjust(ElemType  A[], int k, int len){
 
 #### 2. 构建初始堆
 
-构建初始堆需要在向下排序的基础上从下往上遍历堆，理由是每次向下排序只是**把根节点往下移动**，只能移动其中一个子孩子，另一个子孩子无法被排序，因此要依次遍历每一个父节点，将其为根的子树进行调整。
+构建初始堆需要在向下排序的基础上从下往上遍历堆，理由是每次向下排序只是**把根结点往下移动**，只能移动其中一个子孩子，另一个子孩子无法被排序，因此要依次遍历每一个父结点，将其为根的子树进行调整。
 
 ```cpp
 void BuildMaxHeap(ElemType A[], int len){
@@ -151,7 +151,7 @@ void BuildMaxHeap(ElemType A[], int len){
 
 #### 3. 向上调整
 
-向上排序用于 *插入新节点后的重新排序*。
+向上排序用于 *插入新结点后的重新排序*。
 
 ```cpp
 void AdjustUp(ElemType A[], int k){
