--- a/life/content/blog/FaceWrap/2023-12-1海投.md
+++ b/life/content/blog/FaceWrap/2023-12-1海投.md
@@ -19,6 +19,10 @@ HR没来。
 
 HR强调为工厂运维，不是嵌入式研发，要我考虑清楚，我还是投递了，但去的概率不大。
 
+### 烟台东方瑞创达
+
+12/7在线做了一套笔试题，用电脑登陆腾讯会议共享试题，把答案写到纸上。用手机微信视频，手机需要拍摄到桌面答题场景，题目比较难，涉及 web、java、springboot、mysql，我没有正式准备 java 工作，所以很多答不上来，都是蒙的。
+
 ### 烟台威思顿(东方电子)
 
 两位男上位机研发人员做宣讲，强调是嵌入式，我说对嵌入式接触少，他们强调会给留学习时间，之后我要离开会场了把我拦下，说要一份我的成绩单，我去南堂打印(大部分打印机器都是坏的，打印体验很差)，之后交给他们。
@@ -26,6 +30,10 @@ HR强调为工厂运维，不是嵌入式研发，要我考虑清楚，我还是
 ### 鲁担数据科技(前后端)
 
 我去的时候有一名HR，直接在我的简历上写上后端，之后我要离开会场了把我拦下，说技术主管来了，让我听他讲讲，技术主管疯狂介绍单位背景，大概意思是小团队但是接的都是省级国家级的大项目，我一直“嗯”表示赞同，之后我反问我们的工作，他介绍后端主要是SpringBoot，我表示接触过MVC但不熟，他说前端是Vue等，我说会点React，他在简历写上了前端，说之后会有主管面试，态度好会推到其他部门。
+
+约的12/7早上9:30的面试，HR和我一起在线等了十分多钟，面试官没来，说有紧急的上线项目有问题，说改约下午16:00面试。
+
+现场两位面试官，他们问了一些基础问题，如树的中序遍历、图的深度遍历等，但他们比较介意我考研，认为如果不考就好了，我觉得以他们的观点看也确实没办法。
 
 ### 青岛壹同未来(教育)
 
