--- a/notebook/docs/Master-Application/SDU/832-2/2022.md
+++ b/notebook/docs/Master-Application/SDU/832-2/2022.md
@@ -62,13 +62,13 @@
 
 计算 $P_1$：$P_1$ 位数为 $0001$，找第四位和其相同的，$P_1 = D_1 \oplus D_2 \oplus D_4$ = $0 \oplus 0 \oplus 1$ = $1$
 
-计算 $P_2$：$P_2$ 位数为 $0010$，找第四位和其相同的，$P_2 = D_1 \oplus D_3 \oplus D_4$ = $0 \oplus 1 \oplus 1$ = $0$
+计算 $P_2$：$P_2$ 位数为 $0010$，找第三位和其相同的，$P_2 = D_1 \oplus D_3 \oplus D_4$ = $0 \oplus 1 \oplus 1$ = $0$
 
-计算 $P_3$：$P_3$ 位数为 $0100$，找第四位和其相同的，$P_3 = D_2 \oplus D_3 \oplus D_4$ = $0 \oplus 1 \oplus 1$ = $0$
+计算 $P_3$：$P_3$ 位数为 $0100$，找第二位和其相同的，$P_3 = D_2 \oplus D_3 \oplus D_4$ = $0 \oplus 1 \oplus 1$ = $0$
 
 因此汉明码为 $1000011$。
 
-|   序号| 1    | 2    | 3    | 4    | 5    | 6    | 7    |
+<!-- |   序号| 1    | 2    | 3    | 4    | 5    | 6    | 7    |
 |:---: |:---: |:---: |:---: |:---: |:---: |:---: |:---: |
 |序号二进制|0001|0010 | 0011 | 0100 | 0101 | 0110 | 0111 |
 |  | $P_1$| $P_2$| $D_1$| $P_3$| $D_2$| $D_3$| $D_4$|
@@ -83,7 +83,7 @@
 
 计算 $P_3$：$P_3 = D_2 \oplus D_3 \oplus D_4$ = $1 \oplus 1 \oplus 1$ = $1$
 
-$P_3P_2P_1$ 值为 $100$，即 $5$，说明第 $5$ 位出错。
+$P_3P_2P_1$ 值为 $100$，即 $5$，说明第 $5$ 位出错。 -->
 
 :::
 
