--- a/notebook/docs/Master-Application/SDU/832-2/2024-3.md
+++ b/notebook/docs/Master-Application/SDU/832-2/2024-3.md
@@ -131,6 +131,41 @@
 >
 > A. I、II B. II、IV C. I、II、III D. II、III、IV
 
+存储器分为：
+
+- 静态随机存取存储器(Static Random Access Memory，SRAM)
+- 只读存储器(Read Only Memory, ROM)
+
+一些关于随机存取器、随机访问的辨别：
+
+- **随机存取存储器**：支持在运行时随机读**写**数据，断电后数据丢失，如DRAM、SRAM
+- **ROM不是随机存储器**：修改通常需要特殊的操作，并且不具有与RAM相似的灵活性和速度
+- **RAM和ROM都支持随机访问**：与顺序访问存储器（如磁带）不同，可以通过直接访问存储器中的任意地址来读取或写入数据，因此被称为随机访问
+
+一些对RAM的补充知识：
+
+| 特点\类型|  SRAM  |  DRAM  |
+|:---:    |  :---: | :---:  |
+| 存储信息 | 触发器  |  电容  |
+| 破坏性读 | 无    |  有    |
+| 需要刷新 | 无    |  需要  |
+| 送行列地址| 同时 | 分开，复用|
+| 运行速度 | 快    |  慢    |
+| 集成度   | 低    |  高    |
+| 存储成本 | 高    |  低    |
+| 主要用途 | 高速缓存| 主存  |
+
+DRAM和SRAM价格区别根本在集成度，SRAM集成度低硅片要求多，因此贵。
+
+一些对ROM的补充知识：
+
+- **MROM**：只读存储器，只能写入一次，写入后不能修改
+- **PROM**：可编程只读存储器，只能写入一次，写入后不能修改
+- **EPROM**：可擦除可编程只读存储器，可以擦除后重新写入，编程次数有限，写入时间长
+- **Flash**：由EPROM和EEPROM发展而来，可以擦除后重新写入，可快速擦除重写
+- **SSD**：由控制单元和存储单元Flash组成
+
+
 
 
 ## 简答题
@@ -139,4 +174,18 @@
 
 > 假设主存地址位数为32位，按字节编址，主存和Cache之间采用全相联映射方式，主存块大小为1个字，每字32位，采用回写（write back）方式和随机替换策略，则能存放32K字数据的Cache的总容量至少应有多少位？
 
+我的困惑在于，不知道Cache的字块内地址是否存储，如何存储，在计算容量的时候以为有个字段专门记录字块内地址，因此计算出来的容量不对。
 
+**块内地址字段没有被实际存储，而是通过主存地址的位划分和提取来计算的**。当主存地址的块内地址字段提取出来时，这个块内地址字段的值就是用于在缓存行内定位具体位置的偏移量。
+
+相对于存储器先传输地址，再读取数据，Cache一旦确定了行的位置，实际的读取就在这个位置上进行，而不需要再次传输地址，直接根据块内地址字段返回数据。
+
+因此，Cache的容量计算为：
+
+| 标记位 | 有效位 | 写回位 | 替换位 | 数据块 |
+| :---: | :---: | :---: | :---: | :---: |
+| 控制字段 | 控制字段 | 控制字段 | 控制字段 | 数据字段 |
+
+本题计算为 $(32K+32K)\times 32 = 2M$ 位。
+
+如果问Cache字地址为多少，这里即求块内地址，比如36A8H，块内地址为 A8H，则字块内地址为 A8H。
