--- a/notebook/docs/Master-Application/SDU/832-1/2024-3.md
+++ b/notebook/docs/Master-Application/SDU/832-1/2024-3.md
@@ -157,3 +157,42 @@ void insertionsortlist(int a[], int n){
     }
 }
 ```
+
+### 02 有向图邻接表增加弧
+
+> 已知有向图以邻接表方式存储，设计算法在图中增加一条弧(i, j)。
+
+答案给的解法为用数组存储头结点结构体，遍历边表节点时，使用两个指针进行试探，若其中一个为空，则创造指针并连接即可。
+
+```cpp
+typedef struct ArcNode{
+    int adjvex;
+    struct ArcNode *nextarc;
+    int info;
+}
+typedef struct VNode{
+    int data;
+    ArcNode *firstarc;
+}VNode;
+typedef struct AGraph{
+    VNode adjlist[MAXVEX];
+    int n, e;
+}AGraph;
+void InsertArc(AGraph *G, int i, int j){
+    ArcNode *p, *q;
+    p = G->adjlist[i].firstarc;
+    while(p && p->adjvex != j)
+        p = p->nextarc;
+    if(!p){
+        q = (ArcNode *)malloc(sizeof(ArcNode));
+        q->adjvex = j;
+        q->nextarc = G->adjlist[i].firstarc;
+        G->adjlist[i].firstarc = q;
+        G->e++;
+    }
+    else{
+        printf("The arc has existed!\n");
+        return;
+    }
+}
+```
