--- a/life/content/blog/FaceWrap/2023-11-Pico.md
+++ b/life/content/blog/FaceWrap/2023-11-Pico.md
@@ -30,7 +30,7 @@ date: "2023-11-16"
 - 11月8日晚，校招官网显示 `评估中`，招聘官网显示 `评估通过`；
 - 11月9日中午，HR电话约面试，我以准备面试为理由将时间定在下周四下午三点飞书面试。电话联系后，校招和招聘官网显示 `面试中`，收到 HR 邮件；
 - 11月16日面试，只进行了一面，网上查至少三面，想应该是寄了，当天依然显示`面试中`。
-
+- 12月8日，官网显示面试终止。
 
 ## 面试复盘
 
