--- a/life/content/blog/travel/凛冬游淄博.md
+++ b/life/content/blog/travel/凛冬游淄博.md
@@ -1,4 +1,59 @@
 ---
 title: 凛冬游淄博
-date: "2023-12-29"
+date: "2023-12-31"
 ---
+
+- [第一天(2023.12.30)](#第一天20231230)
+  - [出发](#出发)
+  - [到了淄博人民公园](#到了淄博人民公园)
+  - [中午吃的万象汇](#中午吃的万象汇)
+  - [去酒店小憩](#去酒店小憩)
+
+
+今年五一期间，淄博烧烤应该是最火的，在青岛我也吃过几次淄博烧烤，小饼卷五花肉和大葱，沾上蒜蓉酱，十分美味，我主要喜欢吃 *肉道家·炭火烤肉* 和 *孜饽第一家* 两家店，我觉得都很好吃。
+
+考研终于结束了，我要去淄博玩一玩，放松一下，其实早就计划要去，但是一直有各种事打扰。
+
+## 第一天(2023.12.30)
+
+第一天计划如下：赶8:15的高铁，到站后打车去人民公园，上午在人民公园玩一玩(我以为海岱楼在人民公园)，中午去万象汇吃点好吃的，回酒店小憩一下，下午去淄博琉璃博物馆看瓷器和琉璃，晚上吃小寒羊，然后早早回去休息。
+
+### 出发
+
+早上六点多，我们简单收拾一下就出发了，下楼的时候天刚蒙蒙亮，我们去711买了三明治和饮料准备应付一下早餐。
+
+![石油大学出发去淄博](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%E5%87%BA%E5%8F%91%E5%8E%BB%E6%B7%84%E5%8D%9A.jpg?x-oss-process=style/super_small)
+
+去地铁站的路上有只狗子一直跟着我们，估计是闻到我手里的三明治了，可惜狗哥不知道我们也很饿且赶时间，从宿舍楼下一直跟到西北门出学校，估计他会很伤心，觉得我们很不领情。
+
+![img](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E7%9F%B3%E6%B2%B9%E5%A4%A7%E5%AD%A6%E5%87%BA%E5%8F%91%E5%8E%BB%E6%B7%84%E5%8D%9A%20-%20%E7%81%AB%E8%BD%A6.jpg?x-oss-process=style/super_small)
+
+高铁很暖和，窗户被室外的冷空气敷上了一层薄薄的霜，我在车上看《怦然心动》看了大半部分，后来觉得有点累就不看了，不知不觉就到了淄博。
+
+### 到了淄博人民公园
+
+淄博人民公园有点像我们石家庄的长安公园，非常质朴无华，但是很有人情味，许多老爷爷奶奶在跳交际舞，还有一些小朋友在玩耍。
+
+湖面都结了很厚的冰，鸭子们感觉很无助，都单腿站立在冰面上或者蜷缩在自己厚厚的羽绒服里，他们一定很想念夏天的湖水。代入一下，我如果是他们，就这样蹲一个冬天感觉会很痛苦。
+
+![淄博人民公园 - 冷鸭](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E6%B7%84%E5%8D%9A%E4%BA%BA%E6%B0%91%E5%85%AC%E5%9B%AD%20-%20%E5%86%B7%E9%B8%AD.jpg?x-oss-process=style/super_small)
+
+### 中午吃的万象汇
+
+中午吃的万象汇手工汉布格，朋友一向很喜欢这种炸鸡类食物，毕竟在青岛我天天被他带去麦当劳吃鸡块，看到这个汉堡店我一猜他就想吃，但他总是很委婉，说“有点想”，我很懂他，一般他这么说就是很想吃，于是我们去吃了。
+
+
+确实很大的汉堡，很像青岛的 *牛约堡手工汉堡*，我另外买了 *芒果奶油蛋仔*，吃了几块朋友买的臭豆腐，最后我们吃的太撑了，回了趟酒店休息了一下。
+
+![万象汇手工汉布格](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E6%B7%84%E5%8D%9A%E4%B8%87%E8%B1%A1%E6%B1%87%E6%B1%89%E5%A0%A1.jpg?x-oss-process=style/super_small)
+
+
+### 去酒店小憩
+
+银座华美达比较豪华，但是略微有点老，但是比之前住的如家等强太多了，订酒店的时候最好提前订，我们就晚了一晚就错过了300块钱的亚朵，最后订了这家。
+
+![淄博银座华美达酒店](https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/blog_img/%E6%B7%84%E5%8D%9A%E5%A5%A2%E4%BE%88%E9%85%92%E5%BA%97.jpg?x-oss-process=style/super_small)
+
+---
+
+未完待续
